--- a/src/views/userComment.ejs
+++ b/src/views/userComment.ejs
@@ -14,6 +14,7 @@
         <table>
           <thead>
             <tr>
+              <th>ID</th>
               <th>Title</th>
               <th>Body</th>
               <th>Arthor</th>
@@ -25,6 +26,7 @@
           <tbody>
             <% listData.forEach((data)=>{%>
             <tr>
+              <td><%= data.id %></td>
               <td><%= data.title %></td>
               <td><%= data.body %></td>
               <td><%= data.author %></td>
